# quad_pips

./: CMakeLists.txt  README.md  gazebo_set_joint_commands.txt  init_test.sh  package.xml  rosbag_topics.txt  sparse_bag_topics.txt
config/: dummy_frame_declaration.info  frame_declaration.info  gait.info
config/environment/ground_truth/: balance_beam.json  empty.json  example_stair.json  gap_stones.json  gap_stones_spaced.json  pegboard.json  ramp_0.json  ramp_10.json  ramp_17.json  ramp_25.json  ramped_stepping_stones.json  rubble.json  rubble_low.json  side_stones.json  sparse_stones.json
config/environment/perceptive/: down_ramp.json  down_ramp_10.json  pegboard.json  ramp_10.json  rubble.json  side_stones.json  sparse_stones.json  stairs.json
config/mmp/: dummy_task.info  sqp.info  task.info
config/mpc/: sqp.info  task.info
config/planning/: hyperparameters.info
config/wbc/: wbc.info
include/mmp_quadruped/: PolygonPublisher.h  TerrainPublisher.h
include/mmp_quadruped/environment/: EnvironmentProcessor.h
include/mmp_quadruped/planning/: ConstraintManager.h  ContactSequence.h  ExperienceStep.h  Graph.h  GraphSearcher.h  GraphTraverser.h  ModeFamily.h  ModeFamilyNode.h  ModeFamilyNodeID.h  MultiModalPlanner.h  ReferenceTrajectoryPublisher.h  Superquadric.h  TorsoHeap.h  TorsoPathPlanner.h  TorsoStateNode.h  utils.h
include/mmp_quadruped/visualization/: MultiModalVisualizer.h
include/quad_pips/: MmpDimensions.h  PolygonPublisher.h  TerrainPublisher.h
include/quad_pips/environment/: EnvironmentProcessor.h
include/quad_pips/planning/: ConstraintManager.h  ContactSequence.h  ExperienceStep.h  Graph.h  GraphSearcher.h  GraphTraverser.h  Heap.h  ModeFamily.h  ModeFamilyNode.h  ModeFamilyNodeID.h  MultiModalPlanner.h  ReferenceTrajectoryPublisher.h  Superquadric.h  TorsoHeap.h  TorsoPathPlanner.h  TorsoStateNode.h  utils.h
include/quad_pips/visualization/: Go2Visualizer.h  MultiModalVisualizer.h
launch/: online_perceptive_mmp_sim.launch.py  visualize_environment.launch.py  visualize_rosbag.launch.py
rviz/: mmp.rviz
scripts/: README.md  color.py  convert_yaml_to_world.py  generate_environment.sh  make_environment_yaml.py  pegboard.py  ramp.py  rubble.py  side_stones.py  sparse_stones.py  stairs.py  stones.py  utils.py
src/: LeggedRobotMmpNode.cpp  PolygonPublisher.cpp  PublishPolygon.cpp  PublishTerrain.cpp  TerrainPublisher.cpp
src/environment/: EnvironmentProcessor.cpp
src/planning/: ConstraintManager.cpp  ContactSequence.cpp  Graph.cpp  GraphSearcher.cpp  GraphTraverser.cpp  ModeFamily.cpp  ModeFamilyNode.cpp  MultiModalPlanner.cpp  ReferenceTrajectoryPublisher.cpp  Superquadric.cpp  TorsoPathPlanner.cpp  TorsoStateNode.cpp
src/visualization/: Go2Visualizer.cpp  MultiModalVisualizer.cpp
test/: testSuperquadrics.cpp
worlds/ground_truth/: balance_beam.world  balance_beam.yaml  empty.world  gap_stones.world  gap_stones.yaml  gap_stones_spaced.world  gap_stones_spaced.yaml  pegboard.world  pegboard.yaml  ramp_10.world  ramp_10.yaml  ramp_17.world  ramp_17.yaml  ramp_25.world  ramp_25.yaml  ramped_balance_beam.world  ramped_stepping_stones.world  rubble.world  rubble.yaml  side_stones.world  side_stones.yaml  sparse_stones.world  sparse_stones.yaml  stairs.world  stairs.yaml
worlds/perceptive/: balance_beam.world  down_ramp.world  down_ramp.yaml  down_ramp_10.world  down_ramp_10.yaml  offset_beam.world  pegboard.world  pegboard.yaml  ramp_10.world  ramp_10.yaml  ramped_balance_beam.world  ramped_balance_beam_easy.world  ramped_stepping_stones.world  ramped_stepping_stones_easy.world  rubble.world  rubble.yaml  side_stones.world  side_stones.yaml  sparse_stones.world  sparse_stones.yaml  stairs.world  stairs.yaml
