<?xml version="1.0"?>
<package format="3">
  <name>quad_pips</name>
  <version>0.0.0</version>
  <description>The QuadPiPS package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mass@gatech.edu">mass</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mmp</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="mass@gatech.edu">Max Asselmeier</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>rclcpp</depend>  
  <depend>ocs2_sqp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>urdf</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>pinocchio</depend>
  <depend>ocs2_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>convex_plane_decomposition</depend>
  <depend>convex_plane_decomposition_ros</depend>
  <depend>convex_plane_decomposition_msgs</depend>
  <depend>ocs2_go2_mpc</depend>
  <depend>ocs2_custom_quadruped_interface</depend>
  <depend>superpixels</depend>

  <export>                               
   <build_type>ament_cmake</build_type>
  </export>

</package>
